# PhotoSift

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUI_CONSISTENCY_CHANGES_v1.3.0.md  MS_STORE_VERSION_UPDATE_v1.3.0.md  PACKAGE_INFO_v1.1.0.md  PRIVACY_POLICY_STORE.md  PhotoSift.spec  README.md  RELEASE_CHECKLIST_v1.3.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_SUMMARY_v1.3.0.md  REORGANIZATION_SUMMARY.md  STORE_PACKAGE_CHECKLIST.md  analyze_size.py  build.bat  build.sh  check_model_output.py  check_model_output_2.py  check_model_output_3.py  checksums.txt  create_icon.py  create_release.bat  create_release.sh  create_store_assets.py  create_store_package.bat  create_tutorial_demo.py  debug_duplicates.py  diagnose_imports.py  download_model.py  installer.iss  launch_linux.py  ms-store-submission.md  prepare_release.bat  prepare_release.sh  pyproject.toml  setup.py  test_crash.py  test_dark_detection.py  (+10 more)
.github/: copilot-instructions.md
Canva/: README.md
assets/: README.md
docs/: 60_SECOND_DEMO_SCRIPTS.md  60_SECOND_DEMO_SCRIPTS_EXPANDED.md  AGENT_DEVELOPMENT_WORKFLOW.md  AUTO_SELECT_GROUPS_FEATURE.md  BUTTON_COLOR_STANDARDIZATION_v1.3.0.md  CHANGELOG.md  INSTALLER_LZMA_FIX.md  LOW_RESOLUTION_DETECTOR.md  MSSTORE_CRASH_FIXES_v1.3.0.md  PACKAGE_INFO_v1.6.0.md  PACKAGE_INFO_v1.7.0.md  PRIVACY_POLICY.md  README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md  RELEASE_QUICK_REFERENCE_v1.3.0.md  RELEASE_READY_v1.3.0.md  ReleaseSteps.md  SAFE_CONTENT_SCANNER.md  SIZE_ANALYSIS_v1.3.1.md  UNICODE_PATH_FIX.md  (+9 more)
(+33 files in other folders)
