[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PhotoSift"
version = "1.6.0"
description = "An AI-powered photo classification and organization tool"
authors = [
    {name = "peterchei"}
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "Pillow", 
    "numpy",
    "transformers",
    "opencv-python",
    "tqdm",
    "requests", 
    "packaging",
]

[project.scripts]
photosift = "launchPhotoSiftApp:main"

[tool.pyinstaller]
hiddenimports = [
    "PIL",
    "PIL.Image", 
    "PIL.ImageTk",
    "torch",
    "torchvision",
    "cv2",
    "opencv-python",
    "transformers",
    "numpy",
    "concurrent.futures",
]